--- a/requirements.txt
+++ b/requirements.txt
@@ -10,4 +10,5 @@ pyparsing==3.0.0a2
 python-dateutil==2.8.1    
 scipy==1.5.2    
 setuptools==41.2.0   
-six==1.15.0    
+six==1.15.0   
+mrivis==0.3.7 
